--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.34.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
@@ -16,10 +15,12 @@
     "html-entities": "^2.5.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.8",
     "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
     "winston": "^3.14.2"
   }
 }
