--- a/.env
+++ b/.env
@@ -1,40 +1,107 @@
 HOST=0.0.0.0
-# port
-PORT=3000 # 443 - https, 80 - http
 
-# Other Environment-Specific Settings
-LOG_LEVEL=debug  # Options could be 'debug', 'info', 'warn', 'error'
+# 3000 - dev, 443 - https, 80 - http
+PORT=3000
 
-# Environment: Only use `secure` in production
-NODE_ENV=development  # Change to 'production' when deploying to production
+# Environment: Only use 
+# secure - in production, 
+# development - in development
+NODE_ENV=development
 
-# database
+# Upload Folder
+UPLOAD_DIR = '/uploads'
+
+
+
+# ----------------------
+# Email Configuration
+# ----------------------
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=sample@gmail.com
+EMAIL_PASS=
+BASE_URL='http://127.0.0.1:3000/'
+
+
+
+# ----------------------
+# Session Configuration
+# ----------------------
+SESSION_SECRET='yoursessionsecretatt'
+SESSION_RESAVE=false
+# SESSION_SAVEUNINITIALIZED
+# true - Allow uninitialized sessions for development
+# false - Prevent uninitialized sessions in production
+SESSION_SAVEUNINITIALIZED=true
+# SESSION_HTTPONLY
+# true - Cannot be accessed by JavaScript (Recommended in production)
+# false - JavaScript can access cookies (Only for development/testing)
+SESSION_HTTPONLY=false
+# SESSION_SECURE: 
+# true - if using HTTPS, 
+# false - HTTPS not enforced in development
+SESSION_SECURE=false
+# SESSION_SAMESITE - Prevents sending cookies with cross-site requests
+# helps prevent CSRF, 'lax' is less restrictive and should work with most requests
+# lax - Development , 
+# strict - Production
+SESSION_SAMESITE=lax
+
+
+
+# ----------------------
+# cookie-parser Configuration
+# ----------------------
+COOKIE_PARSER_SECRET_KEY='mysecretkeyatt'
+# HTTP ONLY
+# true - Cannot be accessed by JavaScript (Recommended in production)
+# false - JavaScript can access cookies (Only for development/testing)
+COOKIE_HTTPONLY=false
+# COOKIE_SECURE
+# true - if you're using HTTPS
+# false - HTTPS not enforced in development
+COOKIE_SECURE=false
+# SESSION_SAMESITE - Prevents sending cookies with cross-site requests
+# helps prevent CSRF, 'lax' is less restrictive and should work with most requests
+# lax - Development , 
+# strict - Production
+COOKIE_SAMESITE=lax # 'strict' = H
+
+
+
+# ----------------------
+# cookie-session Configuration
+# ----------------------
+COOKIE_SESSION_SECRET='mycookiesecretatt'
+COOKIE_SESSION_NAME=session
+# HTTP ONLY
+# true - Cannot be accessed by JavaScript (Recommended in production)
+# false - JavaScript can access cookies (Only for development/testing)
+COOKIE_SESSION_HTTPONLY=false
+# SESSION_SAMESITE - Prevents sending cookies with cross-site requests
+# helps prevent CSRF, 'lax' is less restrictive and should work with most requests
+# lax - Development , 
+# strict - Production
+COOKIE_SESSION_SAMESITE=lax
+
+
+
+# ----------------------
+# JWT Configuration
+# ----------------------
+JWT_SECRET='your_secret_keyatt'
+
+
+
+# ----------------------
+# Database Configuration
+# ----------------------
+# PostgreSQL (npm install pg pg-hstore)
+# MySQL (npm install mysql2)
+# sqlite (npm install sqlite3)
+DB_DIALECT='postgres' #mysql #sqlite #postgres
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASSWORD=root
 DB_NAME=attendances
-
-# jwt
-JWT_SECRET=your_secret_key
-
-# cookie-parser
-COOKIE_PARSER_SECRET_KEY=mysecretkey
-COOKIE_HTTPONLY=true # Cannot be accessed by JavaScript
-COOKIE_SECURE=false # Set to true if you're using HTTPS
-COOKIE_SAMESITE=strict # 'strict' = Helps prevent CSRF, 'lax' is less restrictive and should work with most requests
-
-# cookie-session
-COOKIE_SESSION_SECRET=mycookiesecret
-COOKIE_SESSION_NAME=session
-COOKIE_SESSION_HTTPONLY=true # Prevent client-side JavaScript from accessing the cookie
-COOKIE_SESSION_SAMESITE='lax' # Helps prevent CSRF attacks
-
-# express-session
-SESSION_SECRET=yoursessionsecret
-
-# email
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your@gmail.com
-EMAIL_PASS=mailpass
-BASE_URL=http://127.0.0.1:3000/
+# DB_PORT=5432
