--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.8",
     "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.9",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "winston": "^3.14.2"
+  },
+  "scripts": {
+    "start": "nodemon app.js"
   }
 }
