--- a/.env
+++ b/.env
@@ -102,6 +102,6 @@ JWT_SECRET='your_secret_keyatt'
 DB_DIALECT='postgres' #mysql #sqlite #postgres
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=root
+DB_PASSWORD=admin
 DB_NAME=attendances
 # DB_PORT=5432
